Change the examples and data_extraction.md file

--- a/scripts/examples/extract/example.ipynb
+++ b/scripts/examples/extract/example.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# amp_extract tutorial\n",
+    "# `extract` module tutorial\n",
     "\n",
-    "Welcome in the `amp_extract` tutorial/example. Here, we will show how to use `amp_extract` script to generatedata for the testing step.\n",
+    "Welcome in the `extract` module tutorial/example. Here, we will show how to use the `extract` script to generatedata for the testing step.\n",
     "\n",
-    "We need to load all the packages, including the `amp_extract` one. Because it is not used as a package, we will need several steps to do it properly. The version to use it as a normal module is in developpement"
+    "We need to load all the packages, including the `extract` one."
    ]
   },
   {
@@ -17,7 +17,7 @@
    "source": [
     "## Loading modules\n",
     "\n",
-    "Here, we need the significant module allowing to load `amp_extract` properly"
+    "Here, we need the significant module allowing to load the `extract` module properly"
    ]
   },
   {
@@ -35,11 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we need to load the amp_extract module. Several steps are neeeded:\n",
-    "\n",
-    "1. We automatically set the module directory path for your machine and store it in the variable `module_dir`\n",
-    "2. We insert the path of the module directory inside the path of your python environement using the `sys` module. Like that, python knows where to find the module\n",
-    "3. We can now load the `Calc` version from the `amp_extract` module"
+    "Now, we can import the `amppcmt` module. Be sure to have it installed in your environment."
    ]
   },
   {
@@ -48,12 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert path were amp_extract is located\n",
-    "module_dir = '/'.join(os.getcwd().split(sep='/')[:-2])+'/extract'\n",
-    "sys.path.insert(0, module_dir)\n",
-    "\n",
-    "# Load amp_extract\n",
-    "from amp_extract import Calc"
+    "from amppcmt.extract import Calc"
    ]
   },
   {
