--- a/scripts/examples/split/example_split.ipynb
+++ b/scripts/examples/split/example_split.ipynb
@@ -4,16 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# amp_split tutorial\n",
+    "# `split` tutorial\n",
     "\n",
-    "Welcome in the `amp_split` tutorial/example. Here, we will \n",
-    "show how to use `amp_split` script to generate a training and\n",
+    "Welcome in the `split` module tutorial/example. Here, we will \n",
+    "show how to use the `split` module to generate a training and\n",
     "a testing set.\n",
     "\n",
-    "We need to load all the packages, including the `amp_split` one. \n",
-    "Because it is not used as a package, we will need several \n",
-    "steps to do it properly. The version to use it as a normal \n",
-    "module is in developpement."
+    "We need to load all the packages, including the `split` module. "
    ]
   },
   {
@@ -22,7 +19,7 @@
    "source": [
     "## Loading modules\n",
     "\n",
-    "Here, we need the significant module allowing to load `amp_split` properly."
+    "Here, we need the significant module allowing to load `split` and use properly (optional)."
    ]
   },
   {
@@ -40,11 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we need to load the amp_extract module. Several steps are neeeded:\n",
-    "\n",
-    "1. We automatically set the module directory path for your machine and store it in the variable `module_dir`\n",
-    "2. We insert the path of the module directory inside the path of your python environement using the `sys` module. Like that, python knows where to find the module\n",
-    "3. We can now load the `Train_test_split` class from the `amp_split` module"
+    "Now, we need to load the `split` module."
    ]
   },
   {
@@ -53,12 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert path were amp_extract is located\n",
-    "module_dir = '/'.join(os.getcwd().split(sep='/')[:-2])+'/split'\n",
-    "sys.path.insert(0, module_dir)\n",
-    "\n",
-    "# Load amp_extract\n",
-    "from amp_split import Train_test_split"
+    "from amppcmt.split import Train_test_split"
    ]
   },
   {
@@ -117,11 +105,6 @@
     "\n",
     "> This module is under development, please refer to the 'In development' page from the documentation to have more details"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
