"Modifications of the split module/corresponding."

--- a/scripts/examples/split/example_split.ipynb
+++ b/scripts/examples/split/example_split.ipynb
@@ -76,7 +76,9 @@
    "source": [
     "## Split the trajectory\n",
     "\n",
-    "The initial trajectory can be then splitted using the `split_sets_random()` from the `Train_test_split` class. Note that this method extract randomly geometries. If you want to indicate some specific geometries, we need to implement it."
+    "### Randomly\n",
+    "\n",
+    "The initial trajectory can be then splitted randomly using the `split_sets_random()` from the `Train_test_split` class."
    ]
   },
   {
@@ -86,6 +88,26 @@
    "outputs": [],
    "source": [
     "trajectory.split_sets_random()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sequentially (time-splitting)\n",
+    "\n",
+    "This method is more suited if data comes from *ab initio* molecular dynamics simulations. Indeed, it avoids that data present in the training and in the testing set to be similar. Such a similarity can lead to a pollution of the testing dataset, and create artefacts in the results.\n",
+    "\n",
+    "Time-splitting is done using the `split_set_time()` from the `Train_test_split` class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trajectory.split_sets_time()"
    ]
   },
   {
